--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -3,6 +3,7 @@
 \newcommand{\ehsan}[1]{{\color{Cerulean}{\bf{Ehsan says:}} \emph{#1}}}
 \newcommand{\reza}[1]{{\color{Blue}{\bf{Reza says:}} \emph{#1}}}
 
+\newcommand{\supp}{\emph{Supplementary Materials}\xspace}
 
 \newcommand*\Let[2]{\State #1 $\gets$ #2}
 \newcommand*\CSA{\textsc{Csa}\xspace}
