--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -72,7 +72,11 @@
 
 %-- ALG/DS
 \newcommand{\SA}{\mbox{\emph{SA}}}
-
+\newcommand{\method}[1]{{\sc #1}}
+\newcommand{\colbwt}{\ensuremath{\mathcal{T}^{bwt}}}  % collection
+\newcommand{\accessop}{\method{access}}
+\newcommand{\rankop}{\method{rank}}
+\newcommand{\selectop}{\method{select}}
 
 %%% Local Variables: 
 %%% mode: latex
