--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -18,7 +18,7 @@
 \usepackage[all]{nowidow}
 \usetikzlibrary{trees,matrix}
 \usepackage{afterpage}
-
+\usepackage{multirow,color}
 \input{macros.tex}
 
 \title{Compact, Efficient and Unlimited Capacity:
