--- a/paper/sec-lmsdsl.tex
+++ b/paper/sec-lmsdsl.tex
@@ -226,16 +226,15 @@ The full algorithm for computing LM probabilities is given in the \supp as Algor
 Instead we will focus on the method's most critical component, the algorithm for computing $\nlplus{\dotpatdot}$ from the forward \CST, presented in Alg~\ref{alg:n1plusfb_wt}.
 The key different from Alg~\ref{alg:n1plusfb} is the loop from lines 6--9, which uses the \emph{interval-symbols} method.
 This method assumes a \emph{wavelet tree} representation of the \SA component of the \CST, an efficient encoding of the \emph{Burrows-Wheeler transform} (an array comprising the symbol preceeding each entry in the \SA).
-The \emph{interval-symbols} method uses rank and select bit operations to efficiently identify the range of \SA entries in $[\lb{\tf}{\nf}, \rb{\tf}{\nf}]$ the set of preceeding symbols, and for each of these their range of occurrence counts in the corpus.
+The \emph{interval-symbols} method uses rank and select bit operations to efficiently identify for a given pattern the set of preceeding symbols, and for each of symbol the range of occurrences this corresponds to in the \SA.
 For example, in Figure~\ref{fig-suffix-tree} the pattern $\alpha=\text{``night''}$ is preceeded by $s=$``old'' and $s=$``the''.
 These correspond to the only occurrence of ``old'', and the 4$^{th}$ and 5$^{th}$ occurrence of ``the'' in the BWT.
 These occurence bounds can then be used to calculate the range in the \SA by adding to $C_s$, the precomputed offset of the first pattern beginning with $s$, exploiting the property that the \SA is lexicographically sorted.
-In the example above, $C_{\text{the}} = 16$ (``the'' corresponds to \SA entries 16--20) and therefore the location of ``the night'' is therefore $[16+4-1,16+5-1] = [19,20]$ (the $-1$ adjusts for counting from 1 in the above exposition, rather than 0).
+In the example above, $C_{\text{the}} = 16$ (``the'' corresponds to \SA entries 16--20) and therefore the location of ``the night'' is therefore $[16+(4-1),16+(5-1)] = [19,20]$ (the $-1$ adjusts for counting from 1 in the above exposition, rather than 0).
 
-
-The \textsc{N1PlusBack1} is computed in a similar way, using the \emph{interval-symbols} method to compute the number of unique preceeding symbols (see \supp, Algorithm~6).
-Overall the time complexity of inference for both \textsc{N1PlusBack1} and \textsc{N1PlusFrontBack1} is $\Order{k \log \sigma}$ where $k$ is the number of preceeding symbols, a considerable improvement over  \textsc{N1PlusFrontBack}.
-Overall this leads to considerably faster computation of \ngram probabilities compared to the two \CST approach, and although still slower than competing methods like \textsc{Srilm}, it is fast enough to support large scale experiments and has considerably better scaling performance with the Markov order $m$ (even allowing unlimited order), as we will now demonstrate.
+\textsc{N1PlusBack1} is computed in a similar way, using the \emph{interval-symbols} method to compute the number of unique preceeding symbols (see \supp, Algorithm~6).
+Overall the time complexity of inference for both \textsc{N1PlusBack1} and \textsc{N1PlusFrontBack1} is $\Order{k \log \sigma}$ where $k$ is the number of preceeding symbols, a considerable improvement over \textsc{N1PlusFrontBack} using the forward and reverse \CSTs.
+Overall this leads to considerably faster computation of \ngram probabilities compared to the two \CST approach, and although still slower than highly optimised LM toolkits like \textsc{Srilm}, it is fast enough to support large scale experiments, and has considerably better scaling performance with the Markov order $m$ (even allowing unlimited order), as we will now demonstrate.
 
 
 %%% Local Variables: 
