--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -19,6 +19,8 @@
 \usetikzlibrary{trees,matrix}
 \usepackage{afterpage}
 \usepackage{multirow,color}
+\usepackage{todonotes}
+
 \input{macros.tex}
 
 \title{Compact, Efficient and Unlimited Capacity:
@@ -73,7 +75,7 @@ performance, around 100x slower than SRILM. Reranking gains? Can we run with INF
 
 \section{Experiments}
 \label{sec-experiments}
-%\input{sec-experiments.tex}
+\input{sec-experiments.tex}
 
 
 
