combine figures and add rank O(1) sentence

--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -19,6 +19,8 @@
 \usetikzlibrary{trees,matrix}
 \usepackage{afterpage}
 \usepackage{multirow,color}
+\usepackage{subcaption}
+
 \input{macros.tex}
 
 \title{Compact, Efficient and Unlimited Capacity:
