more work on the figure

--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -64,7 +64,7 @@
 
 %-- Syms
 \newcommand{\col}{\ensuremath{\mathcal{T}}}  % collection
-\newcommand{\pattern}{\ensuremath{\mathcal{P}}}  % collection
+\newcommand{\pattern}{\ensuremath{\alpha}}  % collection
 \newcommand{\plen}{\ensuremath{m}}
 \newcommand{\collen}{\ensuremath{n}} 
 \newcommand{\alphabet}{\ensuremath{\Sigma}} 
