--- a/paper/figures/fig-wt-bwt.tex
+++ b/paper/figures/fig-wt-bwt.tex
@@ -18,8 +18,8 @@
 {\tt \#} & {\tt n} & {\tt T} &{\tt \$} &{\tt p} &{\tt p} &{\tt t} &{\tt t} &{\tt n} &{\tt n} 
 &{\tt r} &{\tt r} &{\tt t} &{\tt t} &{\tt o} &{\tt t} &{\tt s} &{\tt s}&{\tt i}
 &{\tt \#}&{\tt \#}&{\tt i}&{\tt t} \\
-{\tt 0} & {\tt 1} & {\tt 1} &{\tt 0} &{\tt 0} &{\tt 0} &{\tt 1} &{\tt 1} &{\tt 1} &{\tt 1} 
-&{\tt 0} &{\tt 0} &{\tt 1} &{\tt 1} &{\tt 1} &{\tt 1} &{\tt 1} &{\tt 1}&{\tt 0}
+{\tt 0} & {\tt \color{red}{1}} & {\tt \color{red}{1}} &{\tt 0} &{\tt 0} &{\tt 0} &{\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt \color{red}{1}}
+&{\tt 0} &{\tt 0} &{\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt \color{red}{1}}&{\tt 0}
 &{\tt 0}&{\tt 0}&{\tt 0}&{\tt 1} \\
 \end{tabular}
 };
@@ -36,7 +36,7 @@
 \setlength\tabcolsep{0.5pt}
 \begin{tabular}{cccccccccccccc}
 {\tt n} & {\tt T} &{\tt t} &{\tt t} &{\tt n} &{\tt n} &{\tt t} &{\tt t} &{\tt o} &{\tt t} &{\tt s} &{\tt s}&{\tt t} \\
-{\tt 0} & {\tt 1} &{\tt 1} &{\tt 1} &{\tt 0} &{\tt 0} &{\tt 1} &{\tt 1} &{\tt 0} &{\tt 1} &{\tt 0} &{\tt 0}&{\tt 1} \\
+{\tt 0} & {\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt 0} &{\tt 0} &{\tt \color{red}{1}} &{\tt \color{red}{1}} &{\tt 0} &{\tt \color{red}{1}} &{\tt 0} &{\tt 0}&{\tt 1} \\
 \end{tabular}
 };
 
@@ -97,7 +97,7 @@
 \setlength\tabcolsep{0.5pt}
 \begin{tabular}{ccccccc}
 {\tt T} & {\tt t} &{\tt t} &{\tt t} &{\tt t} &{\tt t}&{\tt t}\\
-{\tt 1} & {\tt 0} &{\tt 0} &{\tt 0} &{\tt 0} &{\tt 0}&{\tt 0} \\
+{\tt 1} & {\tt \color{red}{0}} &{\tt \color{red}{0}} &{\tt \color{red}{0}} &{\tt \color{red}{0}} &{\tt \color{red}{0}}&{\tt 0} \\
 \end{tabular}
 };
 
