--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -1,17 +1,15 @@
 %Language modelling is the task of estimating the probability of sequences of words in a language.
+Language models (LMs) are one of the major and large components in many modern NLP systems, including machine translation XX and automatic speech recognition XX.
 %
-Languae models (LMs) are one of the major and large components in many modern NLP systems, including machine translation XX and automatic speech recognition XX.
-%
-One approach for accurate language modelling is neural XX, but another is  count-based to harness the power of more data.
+One approach for accurate language modeling is neural XX, but another is  count-based to harness the power of more data.
 %
 To be useful, LMs not only need to be accurate but they also need to be fast and compact.
 %
-In this paper, we build  fast and compact count-based language models on web-scale corpora using modern succienct data structures.
-%  
-We show how to compactly index the text statistics needed by $n$gram language models, so that they can be quiried efficiently to make the probabilities on the fly. 
+In this paper, we build  fast and compact count-based language models on web-scale corpora using modern succinct data structures.
+%  We show how to compactly index the text statistics needed by $n$gram language models, so that they can be queried efficiently to make the probabilities on the fly.       
 %
-Importantly, the stored index and text statistics are kept intact for different LM orders $n$, hence allow to relax the 
-Markov asssumption made in $n$gram LMs by considering very large contexts. 
+Importantly, the stored index and text statistics are kept intact for different LM orders $n$, hence allow to relax the
+Markov assumption made in $n$gram LMs by considering very large contexts.
 
 
   
