--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -6,9 +6,10 @@ One approach for accurate language modeling is neural XX, but another is  count-
 To be useful, LMs not only need to be accurate but they also need to be fast and compact.
 %
 In this paper, we build  fast and compact count-based language models on web-scale corpora using modern succinct data structures.
-%  We show how to compactly index the text statistics needed by $n$gram language models, so that they can be queried efficiently to make the probabilities on the fly.       
 %
-Importantly, the stored index and text statistics are kept intact for $n$gram LMS with different orders (i.e. the context size), hence allow to relax the
+We show how to compactly index the text statistics needed by $n$gram language models, so that they can be queried efficiently to make the probabilities on the fly.       
+%
+Importantly, the stored index and text statistics are kept intact for $n$gram LMs with different orders (i.e. the context size), hence allow to relax the
 Markov assumption made in these LMs by considering very large contexts.
 
 
