Trimmed back the KN part

--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -62,12 +62,14 @@ Brief outline of how the method works; using one or two suffix trees. Forward/ba
 Pata on experiments: pplx good; can scale to large n and massive corpora; adequate runtime
 performance, around 100x slower than SRILM. Reranking gains? Can we run with INFINITE order?
 
-\section{Suffix-based Indexing}
+\clearpage
+%\section{Suffix-based Indexing}
+\section{Background}
 \label{sec-suffix}
 \input{sec-suffix.tex}
 
-\section{Language Modelling}
-\label{sec-lm}
+%\section{Language Modelling}
+%\label{sec-lm}
 \input{sec-lm.tex}
 
 \section{Using \CSTs for KN Computation}
