--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -18,6 +18,11 @@ Portuguese&PT&187.20&49.03&1737\\
 \caption{Data statistics after tokenizing, sentence-splitting, and removing markups, and numberizing. Tokens and sentence counts refer to the training partition. \trevor{Move to \supp}}
 \end{table}
 
+\begin{figure}
+\includegraphics[width=\columnwidth]{figures/german_pattern_size.pdf}
+\caption{Number of successful queries across different pattern sizes from KN computation over the German test set, with unbounded $m$.}
+\end{figure}
+
 \missingfigure[figwidth=\columnwidth]{All 9 languages pplx results with m=2..10,15,20,infinity.}
 
 \missingfigure[figwidth=\columnwidth]{On German, showing the size in MB (y axis) and time (x axis) for 4 methods: CST single, CST dual, SRILM, SRILM compact. Each method is a 'line' connecting m=2,3,4,... Only CST single will go beyond m=6.}
